--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ a {
 
 .row {
   margin-left: -15px;
-  margin-right: -15px; }
+  margin-right: -15px;
+  margin-top: 100px; }
   .row:after {
     content: "";
     display: table;
@@ -160,9 +161,9 @@ a {
   color: #fff;
   text-align: center;
   background-color: #fcc6a5;
-  -webkit-transition: width 3s ease;
-  -o-transition: width 3s ease;
-  transition: width 3s ease; }
+  -webkit-transition: width .5s ease;
+  -o-transition: width .5s ease;
+  transition: width .5s ease; }
 
 .eachProgressPart {
   margin-bottom: 60px; }
@@ -363,9 +364,9 @@ a {
 
 .animated {
   opacity: 0;
-  -webkit-transition: all 1.5s;
-  -o-transition: all 1.5s;
-  transition: all 1.5s;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
   -webkit-transform: translateY(50px);
   -ms-transform: translateY(50px);
   transform: translateY(50px); }
