--- a/css/style.scss
+++ b/css/style.scss
@@ -75,6 +75,7 @@ a {
 .row {
   margin-left: -15px;
   margin-right: -15px;
+  margin-top: 100px;
   &:after {
     content: "";
     display: table;
@@ -216,7 +217,7 @@ a {
   color: #fff;
   text-align: center;
   background-color: rgb(252, 198, 165);
-  transition: width 3s ease;
+  transition: width .5s ease;
 }
 .eachProgressPart {
   margin-bottom: 60px;
@@ -426,7 +427,7 @@ a {
 // animated
 .animated {
   opacity: 0;
-  transition: all 1.5s;
+  transition: all .5s;
   transform: translateY(50px);
 }
 .fadeIn {
