--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,7 @@ a {
 
 .row {
   margin-left: -15px;
-  margin-right: -15px;
-  margin-top: 150px; }
+  margin-right: -15px; }
   .row:after {
     content: "";
     display: table;
@@ -112,7 +111,9 @@ a {
     color: #414141;
     font-size: 18px; }
     .nav-menu a:hover, .nav-menu a:active, .nav-menu a:focus {
-      background-color: rgba(0, 0, 0, 0.05); }
+      background-color: rgba(0, 0, 0, 0.05);
+      color: white;
+      text-decoration: none; }
     .nav-menu a.active {
       -webkit-box-shadow: 0 -2px 0 #e26789 inset;
       box-shadow: 0 -2px 0 #e26789 inset; }
