--- a/css/style.scss
+++ b/css/style.scss
@@ -75,7 +75,6 @@ a {
 .row {
   margin-left: -15px;
   margin-right: -15px;
-  margin-top: 150px;
   &:after {
     content: "";
     display: table;
@@ -163,6 +162,8 @@ a {
     font-size: $font-size + 2;
     &:hover, &:active, &:focus {
       background-color: rgba(black, .05);
+      color: white;
+      text-decoration: none;
     }
     &.active {
       box-shadow: 0 -2px 0 $brand-accent inset;
