--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,10 @@ a {
   margin-left: 30px;
   margin-right: 30px; }
 
+.m-x-3 {
+  margin-left: 45px;
+  margin-right: 45px; }
+
 .p-y-1 {
   padding-top: 15px;
   padding-bottom: 15px; }
@@ -384,4 +388,4 @@ a {
 
 .footerText {
   clear: both;
-  margin: 80px 50px; }
+  margin: 80px 45px; }
